--- a/2A_seq_replay_search.ipynb
+++ b/2A_seq_replay_search.ipynb
@@ -1,11 +1,18 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Param search results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Simulation verification"
+   ]
   }
  ],
  "metadata": {
