--- a/2A_seq_replay_search.ipynb
+++ b/2A_seq_replay_search.ipynb
@@ -60,9 +60,8 @@
     "rslt = smln.run(p, s_params, apxn)\n",
     "\n",
     "# make plot\n",
-    "plot.raster(rslt)\n",
-    "plot.excitability(rslt)\n",
-    "plot.peak_rate_heatmap(rslt)"
+    "plot.heatmaps(rslt)\n",
+    "plot.raster(rslt, pts=[], n_nearest=3, epoch='replay')"
    ]
   }
  ],
