Fix initial trajectory veil computation.

--- a/2A_seq_replay_search.ipynb
+++ b/2A_seq_replay_search.ipynb
@@ -46,7 +46,7 @@
     "from db import make_session, d_models\n",
     "from seq_replay import plot, smln\n",
     "\n",
-    "SMLN_RSLT_ID = ...\n",
+    "SMLN_RSLT_ID = None\n",
     "\n",
     "session = make_session()\n",
     "smln_rslt = session.query(d_models.SmlnRslt).get(SMLN_RSLT_ID)\n",
@@ -58,10 +58,33 @@
     "\n",
     "print('Running smln...')\n",
     "rslt = smln.run(p, s_params, apxn)\n",
-    "\n",
+    "print('Smln complete.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# make plot\n",
-    "plot.heatmaps(rslt)\n",
-    "plot.raster(rslt, pts=[], n_nearest=3, epoch='replay')"
+    "plot.heat_maps(rslt);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot.raster(\n",
+    "    rslt,\n",
+    "    xys=[\n",
+    "    (-.75, .75), (0, .75), (0, 0), (0, -.75), (.75, -.75),  # trj\n",
+    "    (-.75, 0), (-.75, -.75), (.75, .75), (.75, 0),  # non-trj\n",
+    "    ],\n",
+    "    nearest=3,\n",
+    "    epoch='replay')"
    ]
   }
  ],
